fixing the path for the resume download

--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
                           <div class="row">
                             <div class="col-md-8">
                         <span class="fa-stack fa-4x">
-                        <a href="/Users/samuelrosenbluth/Desktop/galvanize/portfolio/personalWebsite/img/SAMUEL_ROSENBLUTH_resume.pdf" download="SAMUEL_ROSENBLUTH_resume.pdf"><h4>Download my Resume</h4><i class="fa fa-arrow-circle-down fa-2x" aria-hidden="true"></i>
+                        <a href='../img/waterisland.png' download="SAMUEL_ROSENBLUTH_resume.pdf"><h4>Download my Resume</h4><i class="fa fa-arrow-circle-down fa-2x" aria-hidden="true"></i>
                         </span>
                       </a>
                       </div>
