fixed the picture in the projects section

--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
               </div>
               <br></br>
               <br></br>
-                        <div class="container">
+                        <!-- <div class="container">
                           <div class="row">
                             <div class="col-md-8">
                         <span class="fa-stack fa-4x">
@@ -366,7 +366,7 @@
                     </div>
                   </div>
                   <br></br>
-                  <br></br>
+                  <br></br> -->
                     <p class="section-heading">I'm always looking for new projects to work on. Please reach out if you have ideas, or would just like to talk.</p>
 
     </section>
@@ -514,7 +514,7 @@
                                 <!-- Project Details Go Here -->
                                 <h2>React Timer App</h2>
                                 <p class="item-intro text-muted">Bulit using ReactJS</p>
-                                <img class="img-responsive img-centered" src="img/portfolio/bandsVoting.png" alt="">
+                                <img class="img-responsive img-centered" src="img/portfolio/TimersApp.png" alt="">
                                 <p>This is a voting app built using the ReactJS framework. I had a lot of fun making this.<a href="https://github.com/rosenbluth/Timer-App"> GitHub Link Here</a>.</p>
                                 <ul class="list-inline">
                                     <li>Date: August 2017</li>
