fixed typos and spelling mistakes

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                     </span>
                     <br></br>
                     <h4 class="service-heading">UI</h4>
-                    <p class="text-muted">I have a strong visual design background. Working as a UX designer I have designed and created web banner ads as well as other visual elements. I also have a B.S. in New Media Communication from Oregon State University.  I have extensive design experience, including a B.S. in New Media from Oregon State University. I have worked in visual media in several different roles. As a Creative Services Producer for ABC, FOX, and NBC affiliates I completed considerable amounts of graphic design; including creating dozens of television commercials and promotional videos. I developed my projects from storyboard to on air and designed all the graphics and logos in the commercials, which I produced. I also completed all the video graphics and editing. During this start to finish production work I used several visual design programs including: Photoshop, After Effects, Sketch and Apple Motion and other Adobe Products. In my employment as a broadcast technician I used Photoshop, Avid, and Illustrator while designing visuals for the onboard cruise ship television programing.
+                    <p class="text-muted">I have a strong visual design background. Working as a UX designer, I have designed and created web banner ads as well as other visual elements. I have extensive design experience, including a B.S. in New Media from Oregon State University. I have worked in visual media in several different roles. As a Creative Services Producer for ABC, FOX, and NBC affiliates I completed considerable amounts of graphic design; including creating dozens of television commercials and promotional videos. I developed my projects from storyboard to on air and designed all the graphics and logos in the commercials, which I produced. I also completed all the video graphics and editing. During this start to finish production work, I used several visual design programs including: Photoshop, After Effects, Sketch and Apple Motion and other Adobe Products. In my employment as a broadcast technician, I used Photoshop, Avid, and Illustrator while designing visuals for the onboard cruise ship television programing.
                     </p>
                 </div>
             </div>
@@ -239,7 +239,7 @@
                                     <h4 class="subheading">Alaska</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">I was born and raised in Alaska and graduated from Dimond High School. I began working at the age of 14 and held various jobs including: concession stand worker, carpet cleaner, steel worker, bus boy, oil field worker, painters assistant, and facilities assistant.</p>
+                                    <p class="text-muted">I was born and raised in Alaska and graduated from Dimond High School. I began working at the age of 14 and held various jobs including: concession stand worker, carpet cleaner, steel worker, bus boy, oil field worker, painter's assistant, and facilities assistant.</p>
                                 </div>
                             </div>
                         </li>
@@ -444,11 +444,11 @@
                     <div class="row">
                         <div class="col-lg-8 col-lg-offset-2">
                             <div class="modal-body">
-                                <h2>Project Heading</h2>
+                                <h2>Prototypes</h2>
                                 <p class="item-intro text-muted">Various Prototypes using different software programs</p>
                                 <img class="img-responsive img-centered" src="img/portfolio/PrototypeDesktop.png" alt="">
 
-                                <p><a href="http://o2egzy.axshare.com">Desktop version full site high fidelity prototype</a>- Bulit using Axture</p>
+                                <p><a href="http://o2egzy.axshare.com">Desktop version full site high fidelity prototype</a>- Built using Axture</p>
 
                                 <p><a href="https://invis.io/DMCZVT5C9">Desktop version prototype</a>- Built using Invision</p>
 
@@ -481,7 +481,7 @@
                             <div class="modal-body">
                                 <!-- Project Details Go Here -->
                                 <h2>React Voting App</h2>
-                                <p class="item-intro text-muted">Bulit using ReactJS</p>
+                                <p class="item-intro text-muted">Built using ReactJS</p>
                                 <img class="img-responsive img-centered" src="img/portfolio/bandsVoting.png" alt="">
                                 <p>This is a voting app built using the ReactJS framework. I had a lot of fun making this.<a href="https://github.com/rosenbluth/voting-app"> GitHub Link Here</a>.</p>
                                 <ul class="list-inline">
@@ -513,7 +513,7 @@
                             <div class="modal-body">
                                 <!-- Project Details Go Here -->
                                 <h2>React Timer App</h2>
-                                <p class="item-intro text-muted">Bulit using ReactJS</p>
+                                <p class="item-intro text-muted">Built using ReactJS</p>
                                 <img class="img-responsive img-centered" src="img/portfolio/TimersApp.png" alt="">
                                 <p>This is a voting app built using the ReactJS framework. I had a lot of fun making this.<a href="https://github.com/rosenbluth/Timer-App"> GitHub Link Here</a>.</p>
                                 <ul class="list-inline">
@@ -547,7 +547,7 @@
                                 <h2>Fighter Tracker</h2>
                                 <p class="item-intro text-muted">Using an Ajax call to the UFC api</p>
                                 <img class="img-responsive img-centered" src="img/portfolio/fighterTracker.png" alt="">
-                                <p>The UFC, and MMA in general, is overlooked by the mainstream sports media. Although this has become less of a problem in the past few years, it is still hard to find reliable information. This project is a way to add your fighters and track them. I still need to add a bunch of features; such as: an alert that pops up when a UFC event is coming up, a table row that adds when a fighters next fight will be, a section that gives news updates, and a few more things. I learned a lot during this project. I had some road blocks along the way but I feel that this project greatly improved my skills. I would have done a better job planning out my project in the beginning. Time management was an issue. It was hard to estimate how long tasks would take. I would have made my trello board differently. I would like to add more features.<a href="https://github.com/rosenbluth/Fighter-Tracker"> GitHub Link Here</a></p>
+                                <p>The UFC, and MMA in general, is overlooked by the mainstream sports media. Although this has become less of a problem in the past few years, it is still hard to find reliable information. This project is a way to add your fighters and track them. I still need to add a bunch of features, such as: an alert that pops up when a UFC event is coming up, a table row that adds when a fighters next fight will be, a section that gives news updates, and a few more things. I learned a lot during this project. I had some road blocks along the way but I feel that this project greatly improved my skills. I would have done a better job planning out my project in the beginning. Time management was an issue. It was hard to estimate how long tasks would take. I would have made my trello board differently. I would like to add more features.<a href="https://github.com/rosenbluth/Fighter-Tracker"> GitHub Link Here</a></p>
                                 <ul class="list-inline">
                                     <li>Date: September 2016</li>
                                     <li>Category: Front End Web Development</li>
