fixed a repeated section

--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
                                     <h4 class="subheading">Creating Visual Media</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">I continue my media career, and went on to shoot live and pre-recorded shows for ABC, NBC, FOX as well as a live and pre-recorded local political talk shows. I conceptualized many designs and implemented those designs using Photoshop, After Effects, Apple Motion, and several other video and graphic design programs. Created graphics, logos and full page graphic designs, created sidebars and lower thirds. Acted as a liaison between the client and the station. Making ideas a reality while also communicating technical boundaries to the client.
+                                    <p class="text-muted">I continued my media career, and went on to shoot live and pre-recorded shows for ABC, NBC, FOX as well as a live and pre-recorded local political talk shows. I conceptualized many designs and implemented those designs using Photoshop, After Effects, Apple Motion, and several other video and graphic design programs. Created graphics, logos and full page graphic designs, created sidebars and lower thirds. Acted as a liaison between the client and the station. Making ideas a reality while also communicating technical boundaries to the client.
                                     </p>
                                 </div>
                             </div>
