Changed the opening phrase.

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <div class="container">
             <div class="intro-text">
                 <div class="intro-heading" id="myName">Sam Rosenbluth</div>
-                <div class="intro-lead-in">A UX designer and front end developer; reliable, with professional experience and a passion for development</div>
+                <div class="intro-lead-in">A UX designer and front end developer. I enjoy solving problems in creative ways.</div>
                 <a href="#projects" class="page-scroll btn btn-xl">My Work</a>
             </div>
         </div>
