Fixed a typo in the projects sction

--- a/index.html
+++ b/index.html
@@ -452,9 +452,9 @@
 
                                 <p><a href="https://invis.io/DMCZVT5C9">Desktop version prototype</a>- Built using Invision</p>
 
-                                <p><a href="https://invis.io/68AYMD8PG">Moblie prototype</a>- Built using Invision</p>
+                                <p><a href="https://invis.io/68AYMD8PG">Mobile prototype</a>- Built using Invision</p>
 
-                                <p><a href="http://xcbdsa.axshare.com">Moblie site high fidelity prototype</a>-  Built using Axture</p>
+                                <p><a href="http://xcbdsa.axshare.com">Mobile site high fidelity prototype</a>-  Built using Axture</p>
 
                                 <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
                             </div>
