updated your index.html with your twitter link
Hope this points more people to your profile 👍

--- a/index.html
+++ b/index.html
@@ -332,9 +332,9 @@
                 </div>
                 <div class="col-sm-4">
                     <div class="contact">
-                      <a href="https://twitter.com/?lang=en">
+                      <a href="https://twitter.com/SamRosenbluth?lang=en">
                         <img src="img/contact/twitter4.png" class="img-responsive img-circle twitter" alt=""></a>
-                        <a href="https://twitter.com/?lang=en">
+                        <a href="https://twitter.com/SamRosenbluth?lang=en">
                         <h4 class="section-heading">Follow me: @SamRosenbluth</h4>
                         </a>
                     </div>
